--- a/dictmaker/requirements.txt
+++ b/dictmaker/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 beautifulsoup4==4.14.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
+html2text==2025.4.15
 idna==3.11
 pydantic==2.12.4
 pydantic_core==2.41.5
